added taskManagement and asyncronous crud operations in the userService